Change to initial to stop jump effect on the language loading

--- a/css/global-style.css
+++ b/css/global-style.css
@@ -533,7 +533,7 @@ blockquote{
 	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 	border: 1px solid #ccc;
-	line-height: inherit;
+	line-height: initial;
 }
 
 .lang-switch .chosen-container-single .chosen-single a:hover{
